# exercism-all

./: .gitignore  README.md
exercism-cpp/: .gitignore  CMakeLists.txt  README.md
exercism-cpp/acronym/: acronym.cpp  acronym.h  acronym_test.cpp
exercism-cpp/affine-cipher/: affine_cipher.cpp  affine_cipher.h  affine_cipher_test.cpp
exercism-cpp/all-your-base/: all_your_base.cpp  all_your_base.h  all_your_base_test.cpp
exercism-cpp/allergies/: allergies.cpp  allergies.h  allergies_test.cpp
exercism-cpp/anagram/: HELP.md  README.md  anagram.cpp  anagram.h  anagram_test.cpp
exercism-cpp/armstrong-numbers/: armstrong_numbers.cpp  armstrong_numbers.h  armstrong_numbers_test.cpp
exercism-cpp/atbash-cipher/: README.md  atbash_cipher.cpp  atbash_cipher.h  atbash_cipher_test.cpp
exercism-cpp/bank-account/: CMakeLists.txt  HELP.md  README.md  bank_account.cpp  bank_account.h  bank_account_test.cpp
exercism-cpp/beer-song/: CMakeLists.txt  HELP.md  README.md  beer_song.cpp  beer_song.h  beer_song_test.cpp
exercism-cpp/binary/: binary.cpp  binary.h  binary_test.cpp
exercism-cpp/binary-search/: HELP.md  README.md  binary_search.cpp  binary_search.h  binary_search_test.cpp
exercism-cpp/binary-search-tree/: README.md  binary_search_tree.h  binary_search_tree_test.cpp
exercism-cpp/bob/: bob.cpp  bob.h  bob_test.cpp
exercism-cpp/circular-buffer/: HELP.md  circular_buffer.cpp  circular_buffer.h  circular_buffer_test.cpp
exercism-cpp/clock/: HELP.md  README.md  clock.cpp  clock.h  clock_test.cpp
exercism-cpp/collatz-conjecture/: collatz_conjecture.cpp  collatz_conjecture.h  collatz_conjecture_test.cpp
exercism-cpp/complex-numbers/: CMakeLists.txt  README.md  complex_numbers.cpp  complex_numbers.h  complex_numbers_test.cpp
exercism-cpp/crypto-square/: HELP.md  README.md  crypto_square.cpp  crypto_square.h  crypto_square_test.cpp
exercism-cpp/darts/: darts.cpp  darts.h  darts_test.cpp
exercism-cpp/diamond/: diamond.cpp  diamond.h
exercism-cpp/difference-of-squares/: difference_of_squares.cpp  difference_of_squares.h  difference_of_squares_test.cpp
exercism-cpp/dnd-character/: dnd_character.cpp  dnd_character.h  dnd_character_test.cpp
exercism-cpp/doctor-data/: doctor_data.cpp  doctor_data.h  doctor_data_test.cpp
exercism-cpp/election-day/: CMakeLists.txt  election_day.cpp  election_day_test.cpp
exercism-cpp/eliuds-eggs/: eliuds_eggs.cpp  eliuds_eggs.h  eliuds_eggs_test.cpp
exercism-cpp/ellens-alien-game/: ellens_alien_game.cpp
exercism-cpp/etl/: HELP.md  README.md  etl.cpp  etl.h  etl_test.cpp
exercism-cpp/flower-field/: flower_field.cpp  flower_field.h  flower_field_test.cpp
exercism-cpp/food-chain/: food_chain.cpp  food_chain.h  food_chain_test.cpp
exercism-cpp/freelancer-rates/: freelancer_rates.cpp  freelancer_rates_test.cpp
exercism-cpp/gigasecond/: CMakeLists.txt  gigasecond.cpp  gigasecond.h  gigasecond_test.cpp
exercism-cpp/grade-school/: grade_school.cpp  grade_school.h  grade_school_test.cpp
exercism-cpp/grains/: grains.cpp  grains.h  grains_test.cpp
exercism-cpp/hamming/: hamming.cpp  hamming.h  hamming_test.cpp
exercism-cpp/hexadecimal/: hexadecimal.cpp  hexadecimal.h  hexadecimal_test.cpp
exercism-cpp/high-scores/: high_scores.cpp  high_scores.h  high_scores_test.cpp
exercism-cpp/interest-is-interesting/: interest_is_interesting.cpp  interest_is_interesting_test.cpp
exercism-cpp/isbn-verifier/: isbn_verifier.cpp  isbn_verifier.h  isbn_verifier_test.cpp
exercism-cpp/isogram/: isogram.cpp  isogram.h  isogram_test.cpp
exercism-cpp/kindergarten-garden/: kindergarten_garden.cpp  kindergarten_garden.h  kindergarten_garden_test.cpp
exercism-cpp/knapsack/: knapsack.cpp  knapsack.h  knapsack_test.cpp
exercism-cpp/largest-series-product/: largest_series_product.cpp  largest_series_product.h  largest_series_product_test.cpp
exercism-cpp/lasagna/: README.md  lasagna.cpp  lasagna_test.cpp
exercism-cpp/lasagna-master/: lasagna_master.cpp  lasagna_master.h  lasagna_master_test.cpp
exercism-cpp/last-will/: last_will.cpp  last_will_test.cpp
exercism-cpp/leap/: README.md  leap.cpp  leap.h  leap_test.cpp
exercism-cpp/linked-list/: HELP.md  linked_list.h  linked_list_test.cpp
exercism-cpp/list-ops/: HELP.md  list_ops.h  list_ops_test.cpp
exercism-cpp/log-levels/: CMakeLists.txt  log_levels.cpp  log_levels_test.cpp
exercism-cpp/luhn/: luhn.cpp  luhn.h  luhn_test.cpp
exercism-cpp/making-the-grade/: making_the_grade.cpp  making_the_grade_test.cpp
exercism-cpp/matching-brackets/: HELP.md  README.md  matching_brackets.cpp  (+2 more)
(+417 files in other folders)
