cmake_minimum_required(VERSION 4.0)
project(exercism-cpp)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(exercism-cpp main.cpp)

add_subdirectory(hello-world)
add_subdirectory(lasagna)
add_subdirectory(last-will)
add_subdirectory(pacman-rules)
add_subdirectory(leap)
add_subdirectory(space-age)
add_subdirectory(triangle)
add_subdirectory(grains)
add_subdirectory(raindrops)
add_subdirectory(pangram)
add_subdirectory(two-fer)
add_subdirectory(grade-school)
add_subdirectory(hamming)
add_subdirectory(nucleotide-count)
add_subdirectory(rna-transcription)