cmake_minimum_required(VERSION 4.0)
project(exercism-cpp)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(exercism-cpp main.cpp)

add_subdirectory(hello-world)
add_subdirectory(lasagna)
add_subdirectory(last-will)
add_subdirectory(pacman-rules)
add_subdirectory(leap)
add_subdirectory(space-age)
add_subdirectory(triangle)
add_subdirectory(grains)
add_subdirectory(raindrops)
add_subdirectory(pangram)
add_subdirectory(two-fer)
add_subdirectory(grade-school)
add_subdirectory(hamming)
add_subdirectory(nucleotide-count)
add_subdirectory(rna-transcription)
add_subdirectory(collatz-conjecture)
add_subdirectory(nth-prime)
add_subdirectory(queen-attack)
add_subdirectory(say)
add_subdirectory(gigasecond)
add_subdirectory(secret-handshake)
add_subdirectory(sum-of-multiples)
add_subdirectory(robot-name)
add_subdirectory(clock)
add_subdirectory(meetup)
add_subdirectory(beer-song)
add_subdirectory(binary-search)
add_subdirectory(phone-number)
add_subdirectory(series)
add_subdirectory(complex-numbers)
add_subdirectory(food-chain)
add_subdirectory(roman-numerals)
add_subdirectory(word-count)
add_subdirectory(circular-buffer)
add_subdirectory(crypto-square)
add_subdirectory(etl)
add_subdirectory(anagram)
add_subdirectory(binary-search-tree)
add_subdirectory(acronym)
add_subdirectory(binary)
add_subdirectory(isogram)
add_subdirectory(pascals-triangle)
add_subdirectory(perfect-numbers)
add_subdirectory(scrabble-score)
add_subdirectory(all-your-base)
add_subdirectory(robot-simulator)
add_subdirectory(bank-account)
add_subdirectory(largest-series-product)
add_subdirectory(isbn-verifier)
add_subdirectory(linked-list)
add_subdirectory(simple-linked-list)
add_subdirectory(diamond)
add_subdirectory(run-length-encoding)
add_subdirectory(resistor-color)
add_subdirectory(resistor-color-duo)
add_subdirectory(flower-field)
add_subdirectory(sublist)
add_subdirectory(zebra-puzzle)
add_subdirectory(list-ops)
add_subdirectory(knapsack)
add_subdirectory(two-bucket)
add_subdirectory(yacht)
add_subdirectory(dnd-character)
add_subdirectory(spiral-matrix)
add_subdirectory(parallel-letter-frequency)
add_subdirectory(pig-latin)
add_subdirectory(twelve-days)
add_subdirectory(log-levels)
add_subdirectory(reverse-string)